[gd_scene load_steps=5 format=3 uid="uid://dogkwnijpgqq7"]

[ext_resource type="Theme" uid="uid://g2o6rrbkiht3" path="res://themes/button.tres" id="1_1xi5e"]
[ext_resource type="Script" path="res://scripts/pause_scene.gd" id="1_kd231"]

[sub_resource type="InputEventKey" id="InputEventKey_63u6g"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_i6l1u"]
events = [SubResource("InputEventKey_63u6g")]

[node name="pause_scene" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kd231")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 288)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="resume_button" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("1_1xi5e")
shortcut = SubResource("Shortcut_i6l1u")
text = "resume"

[node name="restart_button" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("1_1xi5e")
text = "restart"

[node name="quit_button" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme = ExtResource("1_1xi5e")
text = "quit to menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
